# Projeto_Final_CG

./: .gitignore  CMakeLists.txt  README.md
include/: CGHelpers.hpp  Main.hpp  Mesh.h  Model.h  PShader.h  UglyCam.h
include/CGHelpers/: CGHelpers.hpp  Scene.hpp
include/glad/: glad.h
objects/Bigger_Tree/: Bigger_Tree.mtl
objects/Rocks/: Rock004.mtl  Rock005.mtl  Rock006.mtl  Rock007.mtl
objects/Torch/: Torch.mtl
objects/Tree/: tree.mtl
objects/ground/: Ground.mtl
src/: FragShader.frag  Main.cpp  MultipleLights.frag  NoLight.frag  NoLight.vert  VertexShader.vert  basicLight.frag  basicLight.vert  directLight.frag  directLight.vert  glad.c  lightSource.frag  modelLoader.frag  modelLoader.vert  spotLight.frag
